Tool tip update to stop horizontal scroll

--- a/src/css/expertise.scss
+++ b/src/css/expertise.scss
@@ -144,8 +144,8 @@
   }
 
   .tooltip .tooltiptext {
-    width: 176px;
-    margin-left: -88px;
+    width: 150px;
+    margin-left: -75px;
   }
 }
 
